@@ -13,3 +13,22 @@ header-tests.ok: header-tests.md simple-assembly.exe
 
 generate_stamp: header-tests.ok
 	touch generate-stamp
+
+check_with_peverify: generate_stamp
+	@for i in *.exe; do \
+		RES=99; \
+		FIRST=`echo $$i | cut -d '-' -f 1`; \
+		if [ "$$FIRST" == "invalid" ];	then \
+			RES=1; \
+		fi; \
+		if [ "$$FIRST" == "valid" ]; then \
+			RES=0; \
+		fi; \
+		if [ $$RES != 99 ]; then \
+			peverify $$i >/dev/null 2>/dev/null; \
+			R=$$?; \
+			if [ $$R != $$RES ]; then \
+				echo "$$i failed expected $$RES but got $$R"; \
+			fi; \
+		fi; \
+	done
